--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.2",
     "dayjs": "^1.11.9",
+    "faker": "^6.6.6",
+    "material-react-table": "^1.14.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
@@ -30,6 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/recharts": "^2.0.0"
   },
   "scripts": {
