--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "react-router-dom": "^6.14.1",
+    "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "2.7.2",
