add vehicle complete wireup with image uploading

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,10 @@
+# backend route
 REACT_APP_BASE_URL=http://localhost:9000
+
+# firebase config
+REACT_APP_FIREBASE_API_KEY=AIzaSyAhmMkXjcuOh4b6_lWeSj5cb4WsXwunXgk
+REACT_APP_FIREBASE_AUTH_DOMAIN=vehicle-management-platform.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=vehicle-management-platform
+REACT_APP_FIREBASE_STORAGE_BUCKET=vehicle-management-platform.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=932399291229
+REACT_APP_FIREBASE_APP_ID=1:932399291229:web:6d52ef4eab35c0bbc7e6b4
